[package]
name = "issue-68632"
version = "0.1.0"
authors = ["Dmitry Kravtsov <idkravitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#incremental=false
#codegen-units=1


#[profile.bench]
#incremental=false
#codegen-units=1

[[bench]]
name="bench_builtin"


